# OrcaSlicer

android/: build.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  OrcaSlicerAndroid.cpp  OrcaSlicerJNI.cpp
android/app/src/main/java/com/softfever3d/orcaslicer/: ImportActivity.kt  MainActivity.kt  ModelAdapter.kt  NativeInterface.kt  SettingsActivity.kt
android/app/src/main/res/drawable/: ic_file_3mf.xml  ic_file_amf.xml  ic_file_generic.xml  ic_file_obj.xml  ic_file_stl.xml
android/app/src/main/res/layout/: activity_import.xml  activity_import_landscape.xml  activity_main.xml  activity_main_landscape.xml  activity_settings.xml  activity_settings_landscape.xml  item_model.xml
android/app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: preferences.xml
src/libslic3r/: Platform.cpp  Platform.hpp
src/slic3r/: CMakeLists.txt
src/slic3r/GUI/: OpenGLManager.cpp  OpenGLManager_Android.cpp
